--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
             </div>
         </div>
     </div>
+    <footer></footer>
+        <p>&copy; 2024 ProTRACK. All Rights Reserved.</p>
+        <div class="footer-links">
+            <a href="#">Privacy Policy</a>
+            <a href="#">Terms of Service</a>
+            <a href="#">Contact Us</a>
+        </div>
+    </footer>
     <script src="script.js"></script>
 </body>
 
